install(FILES Feren.colors
        DESTINATION ${DATA_INSTALL_DIR}/color-schemes/)
install(FILES FerenDark.colors
        DESTINATION ${DATA_INSTALL_DIR}/color-schemes/)
install(FILES FerenHighContrast.colors
        DESTINATION ${DATA_INSTALL_DIR}/color-schemes/)
install(FILES FerenLight.colors
        DESTINATION ${DATA_INSTALL_DIR}/color-schemes/)
